--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 徐一玄|Brenda
-subtitle:
-description:
-keywords:
+title: 玄关
+subtitle: 徐一玄的个人网站
+description: 私人微博|代码分享|文学创作
+keywords: 玄关,徐一玄,Brenda,Java,后端,程序员,HP
 author: 徐一玄Brenda
-language:
-timezone:
+language: zh-Hans
+timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
@@ -42,7 +42,7 @@ highlight:
   enable: true
   line_number: true
   auto_detect: false
-  tab_replace:
+  tab_replace: 4
   
 # Home page setting
 # path: Root path for your blogs index page. (default = '')
@@ -64,10 +64,11 @@ tag_map:
 ## http://momentjs.com/docs/#/displaying/format/
 date_format: YYYY-MM-DD
 time_format: HH:mm:ss
+use_date_for_updated: true
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 15
 pagination_dir: page
 
 # Extensions
