--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: 玄关
-subtitle: 徐一玄的个人网站
-description: 私人微博|代码分享|文学创作
+subtitle: 徐一玄的个人站<br>私人微博|代码分享|文学创作
+description: 曾醉人间三斛酒<br>掸落世情一丈尘
 keywords: 玄关,徐一玄,Brenda,Java,后端,程序员,HP
 author: 徐一玄Brenda
 language: zh-CN
@@ -49,7 +49,7 @@ highlight:
 # per_page: Posts displayed per page. (0 = disable pagination)
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
-  path: ''
+  path: '/home/'
   per_page: 10
   order_by: -date
   
@@ -81,3 +81,15 @@ deploy:
   type: git
   repo: git@github.com:BrendaXuthus/BrendaXuthus.github.io.git
   branch: master
+
+# index2 generator是否包含官方的hexo-generator-index，默认true（包含）
+index2_include_index: true # defult is true
+
+# 配置index2 generator，可以是数组或对象
+index2_generator:
+  per_page: 15
+  order_by: -date
+  include:
+    - category blog # 只包含blog分类下的文章
+#  exclude:
+#    - tag Hexo # 不包含标签为Hexo的文章
