--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ timezone: Asia/Shanghai
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: xn--4gqy14b4ro.com
 root: /
-#permalink: :year/:month/:day/:title/
-permalink: :category/:id-:post_title.html
+# permalink: :year/:month/:day/:title/
+permalink: :category/:title/
 permalink_defaults:
 
 # Directory
@@ -57,6 +57,10 @@ index_generator:
 # Category & Tag
 default_category: uncategorized
 category_map:
+  博文: blog
+  原创: original
+  同人: fanfic
+  代码: code
 tag_map:
 
 # Date / Time format
@@ -92,6 +96,6 @@ index2_generator:
   per_page: 15
   order_by: -date
   include:
-    - category blog # 只包含blog分类下的文章
+    - category 博文 # 只包含博文分类下的文章
 #  exclude:
 #    - tag Hexo # 不包含标签为Hexo的文章
