--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: 玄关
-subtitle: 徐一玄的个人站<br>私人微博|代码分享|文学创作
+subtitle: 徐一玄的个人站<br>私人微博|技术交流|文学创作
 description: 曾醉人间三斛酒<br>掸落世情一丈尘
 keywords: 玄关,徐一玄,Brenda,Java,后端,程序员,HP
 author: 徐一玄Brenda
