--- a/_config.yml
+++ b/_config.yml
@@ -99,3 +99,24 @@ index2_generator:
     - category 博文 # 只包含博文分类下的文章
 #  exclude:
 #    - tag Hexo # 不包含标签为Hexo的文章
+
+markdown:
+  render:
+    html: true
+    xhtmlOut: false
+    breaks: true
+    linkify: true
+    typographer: true
+    quotes: '“”‘’'
+  plugins:
+    - markdown-it-footnote
+    - markdown-it-sup
+    - markdown-it-sub
+    - markdown-it-abbr
+    - markdown-it-emoji
+  anchors:
+    level: 2
+    collisionSuffix: 'v'
+    permalink: true
+    permalinkClass: header-anchor
+    permalinkSymbol: ''
