--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "hexo-generator-index2": "^0.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-renderer-ejs": "^0.3.1",
-    "hexo-renderer-marked": "^0.3.2",
+    "hexo-renderer-markdown-it": "^4.1.0",
     "hexo-renderer-stylus": "^0.3.3",
-    "hexo-server": "^0.3.1"
+    "hexo-server": "^0.3.1",
+    "markdown-it-emoji": "^1.4.0"
   }
 }
