--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ index2_generator:
 markdown:
   render:
     html: true
-    xhtmlOut: false
+    xhtmlOut: true
     breaks: true
     linkify: true
     typographer: true
